--- a/hiding.tex
+++ b/hiding.tex
@@ -119,7 +119,13 @@ hide actions that appear in the restriction operators. The proof of the followin
   \mathrm{If\ } \fA,\fB\not\in\calA \mathrm{\ then\ }
     \semdenp{(\exclude{B}{P})\hide\calA}&=&\semdenp{\exclude{A}{B}{(P\hide\calA)}}
   \end{array}$$
-\mncomment{Luis, faltan casos, no? Que ocurre si $A$ y/o $B$ pertenecen al conjunto ocultado en los dos ultimos items??}
+\mncomment{Luis, faltan casos, no? Que ocurre si $A$ y/o $B$
+  pertenecen al conjunto ocultado en los dos ultimos
+  items??}\lcomen{Efectivamente no es completo y no pretende
+  serlo. Está dicho en el párrafo anterior, cuando queremos calcular
+  la probabilidad de una (o un 
+  conjunto) feature, debemos añadir sus dependencias y
+  restricciones.}
 %  \begin{proof}
 %    In order to prove this properties it is enough to apply
 %    Proposition~\ref{prop:hid}.
