--- a/conclussions.tex
+++ b/conclussions.tex
@@ -15,9 +15,12 @@ has been developed. This tool has been used to conduct an experimental study.
 The results of this study show that, using our approach, it is possible to compute
 the probability of each feature in the \SPL\ to be present in a valid product.
 Thus, the testing process can focus on those features having a high probability
-of being included in a product. Moreover, the implementation of our proposed algorithm
-shows that the obtained performance is linear with respect to the total
-length of the \SPL.\lcomen{¿qué significa eso?, no hemos demostrado
+of being included in a product.
+%Moreover, the implementation of our proposed algorithm
+%shows that the obtained performance is linear with respect to the total
+%length of the \SPL.
+\ccomen{Es cierto no lo hemos ni estudiado ni analizado.}
+\lcomen{¿qué significa eso?, no hemos demostrado
   nada de complejidad.}\mncomment{Si que se habla de complejidad pero yo no tengo claro que lo que se dice este bien.}
   
 
