fix title appendix

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,5 +1,5 @@
 \appendix
-\section{Results for the proof of Proposition~\ref{prop:DenoOpe}}\label{app:proofs}
+\section{Results for the proof of Section~\ref{prop:DenoOpe}}\label{app:proofs}
 
 \blem\label{lem:pref}
   Let $P\in\fodaPAp$ and $\feature{A}\in\calF$,
@@ -345,7 +345,7 @@
       \end{proof}
 \elem
 
-\section{Proofs of Section~\ref{sec:stat:hidMain}}\label{appendixB}
+\section{Results for the proof of Section~\ref{sec:stat:hidMain}}\label{appendixB}
 
 \bprop\label{prop:appendixB}
   $P\hide\calA\vtran{s}_rQ\hide\calA$ if and only if $r=\sum\lbag p \ |\ P\vtran{s'}_p Q,\
