fix title in image

--- a/hiding.tex
+++ b/hiding.tex
@@ -30,7 +30,7 @@ denoted by $\bot\not\in\calF$, and we consider the set $\calFbot =
   \end{displaymath}
         \linefigure
 
-  \caption{Operational semanitcs for the hiding operator}
+  \caption{Operational semantics for the hiding operator}
   \label{fig:oper-hid}
 \end{figure}
 
