--- a/denotational.tex
+++ b/denotational.tex
@@ -113,16 +113,18 @@ following result.
   Let  $M,M_{1}, M_{2}\in\calM$,
   $p\in(0,1]$ be a probability, and
   $\feature{A},\feature{B}\in\calF$ be features. We have:
-  \begin{itemize}
-  \item $\semdenp{\feature{A};\cdot}(M)\in\calM$
-  \item $\semdenp{\ofeature{A};_{r}\cdot}(M)\in\calM$
-  \item $\semdenp{\cdot\choice_{r}\cdot}(M_{1},M_{2})\in\calM$
-  \item $\semdenp{\cdot\paral\cdot}(M_{1},M_{2})\in\calM$
-  \item $\semdenp{\require{A}{B}{\cdot}}(M)\in\calM$
-  \item $\semdenp{\exclude{A}{B}{\cdot}}(M)\in\calM$
-  \item $\semdenp{\mandatory{A}{\cdot}}(M)\in\calM$
-  \item $\semdenp{\forbid{A}{\cdot}}(M)\in\calM$
-  \end{itemize}
+\begin{multicols}{2}
+	\begin{itemize}
+		\item $\semdenp{\feature{A};\cdot}(M)\in\calM$
+		\item $\semdenp{\ofeature{A};_{r}\cdot}(M)\in\calM$
+		\item $\semdenp{\cdot\choice_{r}\cdot}(M_{1},M_{2})\in\calM$
+		\item $\semdenp{\cdot\paral\cdot}(M_{1},M_{2})\in\calM$
+		\item $\semdenp{\require{A}{B}{\cdot}}(M)\in\calM$
+		\item $\semdenp{\exclude{A}{B}{\cdot}}(M)\in\calM$
+		\item $\semdenp{\mandatory{A}{\cdot}}(M)\in\calM$
+		\item $\semdenp{\forbid{A}{\cdot}}(M)\in\calM$
+	\end{itemize}
+\end{multicols}
 %$$ \begin{array}{lllll}
 %\bullet\ \semdenp{\feature{A};\cdot}(M)\in\calM & &
 %\bullet\ \semdenp{\cdot\paral\cdot}(M_{1},M_{2})\in\calM& &
