--- a/testing.tex
+++ b/testing.tex
@@ -6,26 +6,26 @@
 This section presents the results obtained from an experimental study to show the applicability of our
 approach. The simulations were executed based on the implementation of the denotational
 semantics for the probabilistic extension. The source code is available at the main project site
-\footnote{http://simba.fdi.ucm.es/at/probabilistic/implementation\_splap.tar}. We have used a variability model consisting of 1500 features. This variability model
+\footnote{\url{http://simba.fdi.ucm.es/at/probabilistic/implementation_splap.tar}}. We have used a variability model consisting of 1500 features. This variability model
 was generated randomly using BeTTy~\cite{SeguraHBC11}. The parameters for
 generating the BeTTy model are the following:
 
 \begin{itemize}
-	\item The probability of having a mandatory feature is 0.2.
-	\item The probability of having an optional feature is 0.3.
-	\item The probability of having a feature in a \emph{choose-1} relation is 0.25.
-	\item The probability of having a feature in a \emph{paralel} relation is 0.25.
+        \item The probability of having a mandatory feature is 0.2.
+        \item The probability of having an optional feature is 0.3.
+        \item The probability of having a feature in a \emph{choose-1} relation is 0.25.
+        \item The probability of having a feature in a \emph{paralel} relation is 0.25.
 \end{itemize}
 
 In the field of \SPLs\ analysis, the use of probabilistic methods carries two practical applications. The first one consists in calculating the probability of having a feature in a specific product. This allows us to efficiently assign resources by prioritizing those features with a high probability of being included into the \SPL. The second application consists in estimating the testing coverage in the product line. This
 allows us to calculate those products that can be generated in the testing process.
 
 \begin{figure}[h]
-	\centering
-	\linefigure
-	\includegraphics[width=0.8\hsize,angle=0]{plot_probs_times.eps}
-	\linefigure
-	\caption{Computing time analysis for a model consisting of 1500 features.}\label{fig:plot:probs:times}
+        \centering
+        \linefigure
+        \includegraphics[width=0.8\hsize,angle=0]{plot_probs_times.eps}
+        \linefigure
+        \caption{Computing time analysis for a model consisting of 1500 features.}\label{fig:plot:probs:times}
 \end{figure}
 
 Figure~\ref{fig:plot:probs:times} shows the computing time required to calculate the probability of having
@@ -44,11 +44,11 @@ major part of the features require between 15 and 20 milliseconds to be processe
 portion of them requiring a processing time between 20 and 38 milliseconds.
 
 \begin{figure}[h]
-	\centering
-	\linefigure
-	\includegraphics[width=0.8\hsize,angle=0]{plot_probs_probs.eps}
-	\linefigure
-	\caption{Probabilistic analysis for a 1500 features model.}\label{fig:plot:probs:probs}
+        \centering
+        \linefigure
+        \includegraphics[width=0.8\hsize,angle=0]{plot_probs_probs.eps}
+        \linefigure
+        \caption{Probabilistic analysis for a 1500 features model.}\label{fig:plot:probs:probs}
 \end{figure}
 
 Figure~\ref{fig:plot:probs:probs} shows the probability of each feature in the analyzed model, where the $x$-axis
@@ -62,11 +62,11 @@ this analysis might allow us to establish that by testing only the 28\% of the s
 at least, the 75\% of the generated products, are tested.\mncomment{He reescrito un poco esta frase porque no la entendia. Please, check}
 
 \begin{figure}[h]
-	\centering
-	\linefigure
-	\includegraphics[width=0.8\hsize,angle=0]{plot_probs_probs_sorted.eps}
-	\linefigure
-	\caption{Probabilistic analysis for a 1500 features model, decreasingly sorted.}\label{fig:plot:probs:probs:sorted}
+        \centering
+        \linefigure
+        \includegraphics[width=0.8\hsize,angle=0]{plot_probs_probs_sorted.eps}
+        \linefigure
+        \caption{Probabilistic analysis for a 1500 features model, decreasingly sorted.}\label{fig:plot:probs:probs:sorted}
 \end{figure}
 
 %\begin{figure}[t]
