Alberto - Mejorar motivacion de la herramienta

--- a/conclussions.tex
+++ b/conclussions.tex
@@ -22,6 +22,7 @@ of being included in a product.
 \ccomen{Es cierto no lo hemos ni estudiado ni analizado.}
 \lcomen{¿qué significa eso?, no hemos demostrado
   nada de complejidad.}\mncomment{Si que se habla de complejidad pero yo no tengo claro que lo que se dice este bien.}
+ \acomen{Como en la implementación, directamente quitaba la frase}
   
 
 
