--- a/testing.tex
+++ b/testing.tex
@@ -3,10 +3,14 @@
 \section{Implementation}
 \label{sec:stat:impl}
 
+
 This section presents the results obtained from an experimental study to show the applicability of our
-approach. The simulations were executed based on the implementation of the denotational
-semantics for the probabilistic extension. The source code is available at the main project site
-\footnote{\url{http://simba.fdi.ucm.es/at/probabilistic/implementation_splap.tar}}. We have used a variability model consisting of 1500 features. This variability model
+approach. In order to carry out this study, we have implemented the proposed probabilistic extension by a tool. The source code 
+of this tool is available at the main project site.
+\footnote{\url{http://simba.fdi.ucm.es/at/probabilistic/implementation_splap.tar}}
+The simulations were executed based on the implementation of the denotational
+semantics for the probabilistic extension. We have used a variability model consisting of 
+1500 features. This variability model
 was generated randomly using BeTTy~\cite{SeguraHBC11}. The parameters for
 generating the BeTTy model are the following:
 
@@ -31,7 +35,9 @@ allows us to calculate those products that can be generated in the testing proce
 Figure~\ref{fig:plot:probs:times} shows the computing time required to calculate the probability of having
 each feature in a product.
 %In this case, the total time to obtain the probability for all the features is linear with respect to the total length of the analyzed term
-\mncomment{Que quiere decir esto? Suena raro porque yo esperaria complejidad $O(2^n)$ siendo $n$ el numero de probabilidades que salen en el termino. Pero vamos, que yo no  se mucho de complejidad!}\ccomen{Es cierto, no lo demostramos ni lo analizamos}. It is important to remark that there is a small variation in the processing time for calculating the probability of each single feature. We think that his variation in mainly caused by the inherent noise of the node where the experiment is launched (e.g. disk latencies, operating
+\mncomment{Que quiere decir esto? Suena raro porque yo esperaria complejidad $O(2^n)$ siendo $n$ el numero de probabilidades que salen en el termino. Pero vamos, que yo no  se mucho de complejidad!}\ccomen{Es cierto, no lo demostramos ni lo analizamos}. 
+\acomen{Yo simplemente quitaría esa frase, lo de que la complejidad es lineal}
+It is important to remark that there is a small variation in the processing time for calculating the probability of each single feature. We think that his variation in mainly caused by the inherent noise of the node where the experiment is launched (e.g. disk latencies, operating
 system overhead, memory paging, etc.) and, therefore, it is not related to the algorithm itself.
 
 Since the processing time for each feature is relatively low, being around milliseconds, a single delay in
