--- a/hiding.tex
+++ b/hiding.tex
@@ -91,10 +91,10 @@ The proof of the following result is an immediate consequence of Proposition~\re
 \eprop
 
 As usual in process algebras, it would be desirable that the hiding operator is \emph{derived}, that is, given a syntactic term, there exists a semantically equivalent term without occurrences of the hiding operator.
-The next proposition shows that this is the case: it is possible to \emph{remove} the hiding
+The next proposition shows that  it is possible to \emph{remove} the hiding
 operator from any term. The idea is to substitute any occurrence of
-the hidden actions by the symbol $\bot$ but taking into account  that we cannot
-hide actions that appear in the restriction operators. The proof of the following result is easy by structural induction and by Proposition~\ref{prop:hid}.
+the hidden actions by the symbol $\bot$. However, it is necessary to take into account  that we cannot
+hide actions that appear in the restriction operators and, therefore, these cases are not contemplated. The proof of the following result is easy by structural induction and by Proposition~\ref{prop:hid}.
 
 \bprop
   Let $P,Q\in\fodaPAp$ be terms, $r\in (0,1]$ be a probability, and
@@ -119,13 +119,13 @@ hide actions that appear in the restriction operators. The proof of the followin
   \mathrm{If\ } \fA,\fB\not\in\calA \mathrm{\ then\ }
     \semdenp{(\exclude{B}{P})\hide\calA}&=&\semdenp{\exclude{A}{B}{(P\hide\calA)}}
   \end{array}$$
-\mncomment{Luis, faltan casos, no? Que ocurre si $A$ y/o $B$
-  pertenecen al conjunto ocultado en los dos ultimos
-  items??}\lcomen{Efectivamente no es completo y no pretende
-  serlo. Está dicho en el párrafo anterior, cuando queremos calcular
-  la probabilidad de una (o un
-  conjunto) feature, debemos añadir sus dependencias y
-  restricciones.}
+%\mncomment{Luis, faltan casos, no? Que ocurre si $A$ y/o $B$
+%  pertenecen al conjunto ocultado en los dos ultimos
+%  items??}\lcomen{Efectivamente no es completo y no pretende
+%  serlo. Está dicho en el párrafo anterior, cuando queremos calcular
+%  la probabilidad de una (o un
+%  conjunto) feature, debemos añadir sus dependencias y
+%  restricciones.}
 %  \begin{proof}
 %    In order to prove this properties it is enough to apply
 %    Proposition~\ref{prop:hid}.
