--- a/testing.tex
+++ b/testing.tex
@@ -66,7 +66,7 @@ In this case, there are 450 features with, at least, a probability equal to 0.75
 this analysis might allow us to establish that by testing only the 28\% of the software product line components, we can ensure that
 %the features
 %included in,
-at least, the 75\% of the generated products, are tested.\mncomment{He reescrito un poco esta frase porque no la entendia. Please, check}
+at least, the 75\% of the generated products, are tested.
 
 \begin{figure}[h]
         \centering
