fix implementation url

--- a/testing.tex
+++ b/testing.tex
@@ -7,7 +7,7 @@
 This section presents the results obtained from an experimental study to show the applicability of our
 approach. In order to carry out this study, we have developed a tool to implement the proposed probabilistic extension. The source code
 of this tool is available at the main project site.
-\footnote{\url{http://simba.fdi.ucm.es/at/probabilistic/implementation_splap.tar}}
+\footnote{\url{http://ccamacho.github.io/phd/resources/03_splap.tar}}
 %The simulations were executed based on the implementation of the denotational
 %semantics for the probabilistic extension. 
 We have used a variability model consisting of
