minor spell error

--- a/appendix.tex
+++ b/appendix.tex
@@ -257,7 +257,7 @@
   \item $\f{A}\not\in s$ if and only if $\mandatory{A}{P}\vtranp{s\f{A}\checkmark}{p}\nil$.
   \end{enumerate}
   \begin{proof}
-    In both cases the demonstration is made by induction of th length
+    In both cases the demonstration is made by induction of the length
     of $|s|$.
   \end{proof}
 \elem
