--- a/consistency.tex
+++ b/consistency.tex
@@ -12,7 +12,7 @@ Next we prove an important property of our language: its consistency. We say tha
        \checkmark & \mathrm{if}\ P=\checkmark\\
        \nil & \mathrm{if}\ P=\nil\\
        \feature{A};\np(P) & \mathrm{if}\ P=\feature{A};P\\
-       \ofeature{A};\np(P) & \mathrm{if}\ P=\feature{A};_pP\\
+       \ofeature{A};\np(P) & \mathrm{if}\ P=\ofeature{A};_pP\\
        \np(P) \choice \np(Q) & \mathrm{if}\ P \choice_{p} Q \\
        \np(P) \paral \np(Q) & \mathrm{if}\ P \paral Q \\
        \require{A}{B}{\np(P)}  & \mathrm{if}\ \require{A}{B}{P}\\
