--- a/equivalence.tex
+++ b/equivalence.tex
@@ -28,7 +28,7 @@ Proposition~\ref{prop:DenoOpe}.
 
 \bthm\label{prop:equivprob}
   Let $P\in\fodaPAp$ be a term, $pr\subseteq\calF$ be a product, and
-  $p\in(0,1]$ be a probability. We have $ (pr,p)\in\semdenp{P}$ if and only if
+  $p\in(0,1]$ be a probability. We have that $ (pr,p)\in\semdenp{P}$ if and only if
   $(pr,p)\in\prodp(P)$.
 \ethm
 
