--- a/macros.tex
+++ b/macros.tex
@@ -115,7 +115,7 @@
 \newcommand{\FODAT}{\texttt{AT}}
 
 \newcommand{\FODA}{\texttt{FODA}}
-\newcommand{\fodaPA}{\ensuremath{\mathtt{fodaA}}}
+\newcommand{\fodaPA}{\ensuremath{\mathtt{SPLA}}}
 \newcommand{\fodaPAp}{\ensuremath{\mathtt{SPLA{^\calP}}}}
 \newcommand{\fodaPAbasic}{\ensuremath{\mathtt{fodaA_b}}}
 \newcommand{\wellstructured}{\ensuremath{\mathtt{fodaA_{ws}}}}
