--- a/testing.tex
+++ b/testing.tex
@@ -38,7 +38,7 @@ each feature in a product.
 %In this case, the total time to obtain the probability for all the features is linear with respect to the total length of the analyzed term
 %\mncomment{Que quiere decir esto? Suena raro porque yo esperaria complejidad $O(2^n)$ siendo $n$ el numero de probabilidades que salen en el termino. Pero vamos, que yo no  se mucho de complejidad!}\ccomen{Es cierto, no lo demostramos ni lo analizamos}.
 %\acomen{Yo simplemente quitaría esa frase, lo de que la complejidad es lineal}
-It is important to remark that there is a small variation in the processing time for calculating the probability of each single feature. We think that his variation is mainly caused by the inherent noise of the node where the experiment is launched (e.g. disk latencies, operating
+It is important to remark that there is a small variation in the processing time for calculating the probability of each single feature. We think that this variation is mainly caused by the inherent noise of the node where the experiment is launched (e.g. disk latencies, operating
 system overhead, memory paging, etc.) and, therefore, it is not related to the algorithm itself.
 
 Since the processing time for each feature is relatively low, being around milliseconds, a single delay in
